--- a/index.html
+++ b/index.html
@@ -244,30 +244,32 @@
 		</main> <!-- .main -->
 
 		<footer class="footer">
-			<div class="container">
-				<div class="footer-box footer-logo">
-					<a href="#"><img src="img/logo.png"></a>
-				</div>
+			<div class="footer-top">
+				<div class="container">
+					<div class="footer-box footer-logo">
+						<a href="#"><img src="img/logo.png"></a>
+					</div>
 
-				<div class="footer-box contact-us">
-					<h5 class="footer-box-title">Contact Us</h5>
-					<address>
-						<p>Christopher Street <br>New York City,  NY 100012</p>
-						<p>Phone number: (212) 509-6995</p>
-						<a href="mailto:info@princesscakeshop.com">info@princesscakeshop.com<img src="img/contact.png"></a>
-					</address>				
-				</div>
-				<div class="footer-box working-hours">
-					<h5 class="footer-box-title">Our Working Hours</h5>
-					<p><b>Monday - Friday</b> <br>8am - 9pm</p>
-					<p><b>Saturday - Sunday</b> <br>8am - 4pm</p>
-				</div>
-				<div class="footer-box follow-us">
-					<h5 class="footer-box-title">Follow Us</h5>
-					<a href="https://www.facebook.com" target="_blank"><img src="img/facebook.png"></a>
-					<a href="#" target="_blank"><img src="img/instagram.png"></a>
-					<a href="#" target="_blank"><img src="img/twitter.png"></a>
-					<a href="#" target="_blank"><img src="img/pinterest-p.png"></a>
+					<div class="footer-box contact-us">
+						<h5 class="footer-box-title">Contact Us</h5>
+						<address>
+							<p>Christopher Street <br>New York City,  NY 100012 <br>
+							Phone number: (212) 509-6995</p>
+							<a href="mailto:info@princesscakeshop.com">info@princesscakeshop.com<img src="img/contact.png"></a>
+						</address>				
+					</div>
+					<div class="footer-box working-hours">
+						<h5 class="footer-box-title">Our Working Hours</h5>
+						<p><b>Monday - Friday</b> <br>8am - 9pm</p>
+						<p><b>Saturday - Sunday</b> <br>8am - 4pm</p>
+					</div>
+					<div class="footer-box follow-us">
+						<h5 class="footer-box-title">Follow Us</h5>
+						<a href="https://www.facebook.com" target="_blank"><img src="img/facebook.png"></a>
+						<a href="#" target="_blank"><img src="img/instagram.png"></a>
+						<a href="#" target="_blank"><img src="img/twitter.png"></a>
+						<a href="#" target="_blank"><img src="img/pinterest-p.png"></a>
+					</div>
 				</div>
 			</div>
 			<div class="footer-copyright">
