--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 						<address>
 							<p>Christopher Street <br>New York City,  NY 100012 <br>
 							Phone number: (212) 509-6995</p>
-							<a href="mailto:info@princesscakeshop.com">info@princesscakeshop.com<img src="img/contact.png"></a>
+							<a href="mailto:info@princesscakeshop.com" class="icon-mail">info@princesscakeshop.com</a>
 						</address>				
 					</div>
 					<div class="footer-box working-hours">
@@ -265,10 +265,12 @@
 					</div>
 					<div class="footer-box follow-us">
 						<h5 class="footer-box-title">Follow Us</h5>
-						<a href="https://www.facebook.com" target="_blank"><img src="img/facebook.png"></a>
-						<a href="#" target="_blank"><img src="img/instagram.png"></a>
-						<a href="#" target="_blank"><img src="img/twitter.png"></a>
-						<a href="#" target="_blank"><img src="img/pinterest-p.png"></a>
+						<div class="follow-us-holder">
+							<a href="https://www.facebook.com" target="_blank" class="icon-facebook"></a>
+							<a href="https://www.instagram.com/" target="_blank" class="icon-instagram"></a>
+							<a href="https://twitter.com/" target="_blank" class="icon-twitter"></a>
+							<a href="https://www.pinterest.com/" target="_blank" class="icon-pinterest"></a>
+						</div>
 					</div>
 				</div>
 			</div>
