scroll to completed

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 				</a>
 				<nav class="nav js-nav">
 					<ul class="nav-list">
-						<li class="nav-list-item"><a href="#">CHOOSE CAKE</a></li>
-						<li class="nav-list-item"><a href="#">ABOUT</a></li>
-						<li class="nav-list-item"><a href="#">GALLERY</a></li>
-						<li class="nav-list-item"><a href="#">TESTIMONIALS</a></li>
+						<li class="nav-list-item"><a href="#choose">CHOOSE CAKE</a></li>
+						<li class="nav-list-item"><a href="#about">ABOUT</a></li>
+						<li class="nav-list-item"><a href="#gallery">GALLERY</a></li>
+						<li class="nav-list-item"><a href="#testimonials">TESTIMONIALS</a></li>
 					</ul>
-					<a class="btn" href="#">CONTACT US</a>
+					<a class="btn" href="#contact">CONTACT US</a>
 				</nav>
 			</div>
 		</header> <!-- .header -->
@@ -65,7 +65,7 @@
 				</div>
 			</section> <!-- .section-hero --> 
 
-			<section class="section-choose">
+			<section class="section-choose" id="choose">
 				<div class="container">
 					<h2 class="title-section section-choose-title"><span>CHOOSE ONE FOR YOU</span></h2>
 					<div class="row">
@@ -141,7 +141,7 @@
 				</div>
 			</section> <!-- .section-choose -->
 
-			<section class="section-about">
+			<section class="section-about" id="about">
 				<div class="container">
 					<h3 class="title-section"><span>ABOUT US</span></h3>
 					<div class="section-about-holder row">
@@ -158,7 +158,7 @@
 				</div>
 			</section> <!-- .section-about -->
 
-			<section class="section-gallery">
+			<section class="section-gallery" id="gallery">
 				<div class="container">
 					<h4 class="title-section"><span>GALLERY</span></h4>
 					<div class="section-tabs">
@@ -212,7 +212,7 @@
 				</div>
 			</section> <!-- .section-gallery -->
 
-			<section class="section-testimonials">
+			<section class="section-testimonials" id="testimonials">
 				<h5 class="title-section"><span>TESTIMONIALS</span></h5>
 				<div class="section-testimonial-slider js-testimonial-slider">
 					<div class="testimonials-slide">
@@ -243,7 +243,7 @@
 			</section> <!-- .section-testimonials -->
 		</main> <!-- .main -->
 
-		<footer class="footer">
+		<footer class="footer" id="contact">
 			<div class="footer-top">
 				<div class="container">
 					<div class="footer-box footer-logo">
